--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.82"
 futures-util = "0.3.30"
 serde = "1.0.200"
+sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres"] }
 tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
