--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.82"
 futures-util = "0.3.30"
+rand = "0.8.5"
 serde = "1.0.200"
 sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres"] }
 tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
