--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '3'
 services:
   bot:
     image: ww-bot:latest
     restart: always
     env_file:
       - .env
+    network_mode: "host"
